--- a/Tienda/nbproject/project.properties
+++ b/Tienda/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Tienda.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-all-1.3.jar=C:\\Users\\Mia\\Desktop\\hamcrest-all-1.3.jar
+file.reference.junit-4.12.jar=C:\\Users\\Mia\\Desktop\\junit-4.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
